# Reservoir_Pytorch

./: .gitignore  00.pytorch_Fundamentals.ipynb  README.md  Ragedpi.code-profile  model.pth  pyproject.toml  requirements.txt  what is this
Examples/: roughwork.ipynb
Examples/HyperParameter/: AutoReservoirGrid.py  AutoReservoirpy.py  Benchmark.py  config.json
Examples/Input_Discretization/: 3Dplots.py  Batched_sweep.py  DivergenceAnalysis.py  Heatmaps.py  Learning.ipynb  Parallel_Sweep.py  README.md  Serial_Sweep.py  Testing.ipynb  Testing.py  Tests.ipynb  analysis.ipynb  analysis.py  box_strip.ipynb  box_strip.py  data_generation.ipynb  divergence_analysis.ipynb  matric_plot.ipynb  matric_plot.py  notebook.ipynb  requirements.txt  script.py  sweep.py  test.ipynb  violinplot.ipynb
Examples/Lorenz/: Lorenz.ipynb  LorenzPlot.py  LorenzPred.py  res_test.py
Examples/Mackey_Glass/: MackeyGlassPreds.py
Examples/Nifty50/: nifty50.ipynb
Examples/QRC_QOscillator(2023)/: SinSquarePlot.py  SineSquareClassfication.py  readme.md  sinesquare.py
Examples/Weight_Landscape/: Sweep.py  w_out.ipynb  w_out.py
Learning_Pytorch/: 00.pytorch_Fundamentals.ipynb  00_pytorch_fundamentals_exercises.ipynb  01_Pytorch_workflow.ipynb  01_pytorch_workflow_exercise.py  02_NN_Classification.ipynb  02_pytorch_classification_exercises.ipynb  03_Convolution.ipynb  Pytorch.md
Learning_Pytorch/models/: 01_pytorch_workflow_model_1.pth  02_Linear_model_exercise.pth
ReservoirGrid/: Challange.ipynb  Reservoir.gaphor  learning.ipynb
research/: requirements.txt
reservoirgrid/: __init__.py
(+110 files in other folders)
