[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoirgrid"
version = "0.1.0"
description = "Reservoir Computing library for chaotic and dynamical systems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add your core requirements here (e.g., "numpy", "scipy")
]

[tool.setuptools.packages.find]
where = ["src"]